[tool.poetry]
name = "dbwriter_python"
version = "0.1.0"
description = ""
authors = ["Charl P. Botha <cpbotha@vxlabs.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"
sqlmodel = "*"
uvicorn = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
