[tool.poetry]
name = "dbwriter_python"
version = "0.1.0"
description = ""
authors = ["Charl P. Botha <cpbotha@vxlabs.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
uvicorn = "^0.30.1"
aiosqlite = "^0.20.0"
psycopg2 = "^2.9.1"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.31"
httptools = "^0.6.1"
greenlet = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
